[jakarta/hibernate] Remove obsolete code.